[package]
name = "blue_kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "blue_kernel"
crate-type = ["staticlib","rlib"]
path = "src/lib.rs"

[build-dependencies]
cbindgen = "0.24.0"
blue_kconfig = { path = "../kconfig" }
enum-iterator = "1.4.0"

[dependencies]
log = "0.4"
const_default1 = { version = "1", package = "const-default", default-features = false }
cfg-if = "1"
paste = "1.0.6"
pinned-init = { version = "0.0.8", features = ["alloc"], default-features = false }
blue_arch = { path = "../arch" }
blue_infra = { path = "../infra" }
blue_kconfig = { path = "../kconfig" }

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
strip = false
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 'z' # use 'z' or 's' for opt code size
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = true
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 16
rpath = false

[features]
default = ["alloc", "allocator_api", "schedule_with_time_slice"]
slab = []
buddy = []
llff = []
tlsf = []
alloc = []
rwlock = ["condvar"]
condvar = ["mutex","semaphore"]
event = []
messagequeue_priority = []
semaphore = []
mutex = []
messagequeue = []
allocator_api = []
stack_highwater_check = []
schedule_with_time_slice = []
thread_priority_max = []
smp = []
mailbox = []
overflow_check = []
idle_hook = []
mempool  = []
memheap  = []
heap  = []
debugging_spinlock = []
debugging_object = []
debugging_context  = []
debugging_init  = []
debugging_scheduler = []
signals = []
heap_isr = []
compat_newlibc = []
