import("//build/templates/rust.gni")
import("//build/toolchain/bluekernel.gni")
import("//kernel/common_crate_rustflags.gni")

build_rust("librs") {
  crate_type = "rlib"
  crate_name = "librs"
  sources = [ "src/lib.rs" ]
  deps = [
    "//external/spin/v0.9.8:spin",
    "//kernel/header:bluekernel_header",
    "//kernel/scal:bluekernel_scal",
    "//libc:libc",
  ]

  rustflags = common_crate_rustflags
}

build_rust("librs_test") {
  testonly = true
  crate_type = "rlib"
  crate_name = "librs"
  sources = [ "src/lib.rs" ]
  deps = [
    "//external/spin/v0.9.8:spin",
    "//kernel/header:bluekernel_header",
    "//kernel/scal:bluekernel_scal_test",
    "//libc:libc",
  ]

  rustflags = common_crate_rustflags
}

build_rust("librs_unittest_image") {
  testonly = true
  crate_type = "bin"
  sources = [ "src/lib.rs" ]
  edition = "2021"

  deps = [
    "//external/spin/v0.9.8:spin",
    "//kernel/header:bluekernel_header",
    "//kernel/kernel:bluekernel",
    "//kernel/scal:bluekernel_scal_test",
    "//libc:libc",
  ]
  proc_macro_deps = [ "//kernel/test_harness:bluekernel_test_macro" ]
  inputs = [ "//kernel/kernel/src/bsp/$bsp/link.x" ]
  rustflags = test_image_rustflags
  rustflags += common_crate_rustflags
}

gen_qemu_runner("librs_unittest_runner") {
  testonly = true
  img = ":librs_unittest_image"
  qemu = "$qemu_exe"
  board = "$bsp"
}

run_qemu_check("run_librs_unittest") {
  testonly = true
  runner = ":librs_unittest_runner"
  checker = "src/lib.rs"
}

if (direct_syscall_handler) {
  group("check_librs") {
    testonly = true
    deps = [
      ":run_librs_unittest",
      "tests/integration_test:run_librs_integration_test",
      "tests/posixtestsuite:run_librs_posix_testsuite",
    ]
  }
} else {
  # FIXME: When in SWI mode, we have trouble handling ExitThread syscall.
  # ExitThread's handler never returns and is in SVC context, current kernel
  # fails to switch to another thread due to lower priority of PendSV
  group("check_librs") {
    testonly = true
  }
}
