import("//build/templates/rust.gni")
import("//build/toolchain/bluekernel.gni")
import("//kernel/common_crate_rustflags.gni")

group("check_loader") {
  testonly = true
  deps = [ "tests:run_loader_integration_test" ]
}

group("inputs") {
  testonly = true
  deps = [ "tests/inputs:inputs" ]
}

if (coverage || profile) {
  build_rust("common_cov") {
    crate_type = "rlib"
    sources = [ "tests/cov/lib.rs" ]
    deps = [
      "//external/minicov/v0.3.7:minicov",
      "//external/semihosting/v0.1.20:semihosting",
    ]
  }
}

build_rust("bluekernel_loader") {
  crate_type = "rlib"
  sources = [ "src/lib.rs" ]
  deps = [
    "//external/goblin/v0.9.3:goblin",
    "//kernel/librs:librs",
  ]
  if (board == "qemu_virt64_aarch64") {
    rustflags = [
      "--cfg",
      "aarch64",
    ]
  }
}
