# Copyright (c) 2025 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/rust.gni")
import("//build/toolchain/blueos.gni")
import("//kernel/common_crate_rustflags.gni")

group("check_loader") {
  testonly = true
  deps = [ "tests:run_loader_integration_test" ]
}

group("inputs") {
  testonly = true
  deps = [ "tests/inputs:inputs" ]
}

if (coverage || profile) {
  build_rust("common_cov") {
    crate_type = "rlib"
    sources = [ "tests/cov/lib.rs" ]
    deps = [
      "//external/minicov/v0.3.7:minicov",
      "//external/semihosting/v0.1.20:semihosting",
    ]
  }
}

build_rust("blueos_loader") {
  crate_type = "rlib"
  sources = [ "src/lib.rs" ]
  deps = [
    "//external/goblin/v0.9.3:goblin",
    "//librs:librs",
  ]
}
