[package]
name = "rtcore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rtcore"
crate-type = ["staticlib"]
path = "src/lib.rs"

[build-dependencies]
bindgen = "0.69.4"
cbindgen = "0.24.0"

[dependencies]
log = "0.4"
const_default1 = { version = "1", package = "const-default", default-features = false }
# lots of compile errors, use source code
pinned-init = { path = "./third_party/pinned-init" }
paste = "1.0.6"
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
strip = false
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3 # use 'z' or 's' for opt code size
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = true
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 16
rpath = false

[features]
default = ["tlsf", "alloc", "allocator_api",]
slab = []
buddy = []
llff = []
tlsf = []
alloc = []
allocator_api = []
# RT-thread config
RT_USING_SMP = []
RT_SMP_AUTO_BOOT = []
RT_USING_HOOK = []
USE_RUST = []
RT_HOOK_USING_FUNC_PTR = []
RT_CONFIG_H__ = []
RT_THREAD_PRIORITY_256 = []
RT_USING_OVERFLOW_CHECK = []
RT_USING_IDLE_HOOK = []
RT_USING_TIMER_SOFT = []
RT_USING_DEBUG = []
RT_DEBUGING_COLOR = []
RT_DEBUGING_CONTEXT  = []
RT_DEBUGING_INIT  = []
RT_USING_SEMAPHORE  = []
RT_USING_MUTEX  = []
RT_USING_EVENT  = []
RT_USING_MAILBOX  = []
RT_USING_MESSAGEQUEUE  = []
RT_USING_MESSAGEQUEUE_PRIORITY  = []
RT_USING_MEMPOOL  = []
RT_USING_SMALL_MEM  = []
RT_USING_MEMHEAP  = []
RT_MEMHEAP_FAST_MODE  = []
RT_USING_SMALL_MEM_AS_HEAP  = []
RT_USING_MEMTRACE  = []
RT_USING_HEAP  = []
RT_USING_DEVICE  = []
RT_USING_DEVICE_OPS  = []
RT_USING_INTERRUPT_INFO  = []
RT_USING_CONSOLE  = []
RT_USING_CACHE  = []
RT_USING_HW_ATOMIC  = []
RT_USING_CPU_FFS  = []
ARCH_MM_MMU  = []
ARCH_ARM  = []
ARCH_ARM_MMU  = []
ARCH_ARM_CORTEX_A  = []
RT_USING_GIC_V2  = []
ARCH_ARM_CORTEX_A9 = []
RT_USING_COMPONENTS_INIT  = []
RT_USING_USER_MAIN  = []
RT_USING_LEGACY  = []
RT_USING_MSH  = []
RT_USING_FINSH  = []
FINSH_USING_MSH  = []
FINSH_USING_HISTORY  = []
FINSH_USING_SYMTAB  = []
MSH_USING_BUILT_IN_COMMANDS  = []
FINSH_USING_DESCRIPTION  = []
FINSH_USING_OPTION_COMPLETION  = []
RT_USING_DFS = []
DFS_USING_POSIX  = []
DFS_USING_WORKDIR  = []
RT_USING_DFS_V2 = []
RT_USING_DFS_ELMFAT = []
RT_DFS_ELM_WORD_ACCESS = []
RT_DFS_ELM_USE_LFN_3 = []
RT_DFS_ELM_LFN_UNICODE_0 = []
RT_DFS_ELM_REENTRANT = []
RT_USING_DFS_DEVFS = []
RT_USING_DFS_ROMFS = []
RT_USING_DFS_TMPFS = []
RT_USING_DFS_MQUEUE = []
RT_USING_DEVICE_IPC = []
RT_USING_SYSTEM_WORKQUEUE = []
RT_USING_SERIAL = []
RT_USING_SERIAL_V1 = []
RT_SERIAL_USING_DMA = []
RT_USING_I2C = []
RT_USING_I2C_BITOPS = []
RT_USING_PIN = []
RT_USING_NULL = []
RT_USING_ZERO = []
RT_USING_RANDOM = []
RT_USING_MTD_NOR = []
RT_USING_MTD_NAND = []
RT_MTD_NAND_DEBUG = []
RT_USING_RTC = []
RT_USING_SOFT_RTC = []
RT_USING_SDIO = []
RT_USING_SPI = []
RT_USING_SPI_MSD = []
RT_USING_SFUD = []
RT_SFUD_USING_SFDP = []
RT_SFUD_USING_FLASH_INFO_TABLE = []
RT_USING_WDT = []
RT_USING_DEV_BUS = []
RT_USING_KTIME = []
RT_LIBC_USING_LIGHT_TZ_DST = []
RT_USING_POSIX_FS = []
RT_USING_POSIX_DEVIO = []
RT_USING_POSIX_STDIO = []
RT_USING_POSIX_POLL = []
RT_USING_POSIX_SELECT = []
RT_USING_POSIX_TERMIOS = []
RT_USING_POSIX_AIO = []
RT_USING_POSIX_DELAY = []
RT_USING_POSIX_CLOCK = []
RT_USING_POSIX_TIMER = []
RT_USING_POSIX_PIPE = []
RT_USING_POSIX_MESSAGE_QUEUE = []
RT_USING_POSIX_MESSAGE_SEMAPHORE = []
RT_USING_RESOURCE_ID = []
RT_USING_ADT = []
RT_USING_ADT_AVL = []
RT_USING_ADT_BITMAP = []
RT_USING_ADT_HASHMAP = []
RT_USING_ADT_REF = []
SOC_VEXPRESS_A9 = []
RT_USING_UART0 = []
RT_USING_UART1 = []
RT_DEBUGING_SPINLOCK = []
RT_USING_SIGNALS = []
RT_USING_UTEST = []
RT_USING_UTESTCASES = []
UTEST_EVENT_TC = []
UTEST_MAILBOX_TC = []
UTEST_MEMHEAP_TC = []
UTEST_MESSAGEQUEUE_TC = []
UTEST_MUTEX_TC = []
UTEST_SELF_PASS_TC = []
UTEST_SEMAPHORE_TC = []
UTEST_SIGNAL_TC = []
UTEST_SMALL_MEM_TC = []
UTEST_THREAD_TC = []
UTEST_TIMER_TC = []
UTEST_IRQ_TC = []
RT_NAME_MAX = []
RT_USING_MODULE = []
RT_USING_HEAP_ISR = []
RT_KSERVICE_USING_STDLIB_MEMORY = []