import("//build/templates/rust.gni")
import("//kernel/common_crate_rustflags.gni")

build_rust("blueos_scal") {
  crate_name = "blueos_scal"
  crate_type = "rlib"
  sources = [ "src/lib.rs" ]
  edition = "2021"
  deps = [ "//kernel/header:blueos_header" ]
  rustflags = common_crate_rustflags
  if (direct_syscall_handler) {
    rustflags += [
      "--cfg",
      "direct_syscall_handler",
    ]
    deps += [ "//kernel/kernel:blueos" ]
  }
}

build_rust("blueos_scal_test") {
  testonly = true
  crate_name = "blueos_scal"
  crate_type = "rlib"
  sources = [ "src/lib.rs" ]
  edition = "2021"
  deps = [ "//kernel/header:blueos_header" ]
  rustflags = common_crate_rustflags
  if (direct_syscall_handler) {
    rustflags += [
      "--cfg",
      "direct_syscall_handler",
    ]
    deps += [ "//kernel/kernel:blueos" ]
  }
}

build_rust("blueos_scal_posixtestsuite") {
  testonly = true
  crate_name = "blueos_scal"
  crate_type = "rlib"
  sources = [ "src/lib.rs" ]
  edition = "2021"
  deps = [ "//kernel/header:blueos_header" ]
  rustflags = common_crate_rustflags
  if (direct_syscall_handler) {
    rustflags += [
      "--cfg",
      "direct_syscall_handler",
    ]
    deps += [ "//kernel/kernel:blueos_posixtestsuite" ]
  }
}

build_rust("blueos_scal_std") {
  crate_name = "blueos_scal"
  crate_type = "rlib"
  sources = [ "src/lib.rs" ]
  edition = "2021"
  deps = [ "//kernel/header:blueos_header" ]
  rustflags = common_crate_rustflags
  if (direct_syscall_handler) {
    rustflags += [
      "--cfg",
      "direct_syscall_handler",
    ]
    deps += [ "//kernel/kernel:blueos_std" ]
  }
}

build_rust("blueos_scal_swi") {
  crate_name = "blueos_scal"
  crate_type = "rlib"
  sources = [ "src/lib.rs" ]
  edition = "2021"
  deps = [ "//kernel/header:blueos_header" ]
  rustflags = common_crate_rustflags
}
