# Copyright (c) 2025 vivo Mobile Communication Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/build_template.gni")

bindgen("cmsis_os2_header") {
  bindgen_flags = [
    "--use-core",
    "--ctypes-prefix",
    "core::ffi",
  ]
  sources = [ "RTOS2/wrapper.h" ]
  inputs = [
    "RTOS2/cmsis_os2.h",
    "RTOS2/os_tick.h",
  ]
  cflags = [
    "--target=$llvm_target",
    "-fshort-enums",
    "-fsigned-char",
    "-nostdlib",
    "-isystem",
    "$sysroot_path",
  ]
}

bindgen("cmsis_os_header") {
  bindgen_flags = [
    "--use-core",
    "--ctypes-prefix",
    "core::ffi",
  ]
  sources = [ "RTOS1/cmsis_os.h" ]
  cflags = [
    "--target=$llvm_target",
    "-fshort-enums",
    "-fsigned-char",
    "-isystem",
    "$sysroot_path",
  ]
}

build_rust("cmsis_os") {
  crate_type = "rlib"
  sources = [ "src/lib.rs" ]
  deps = [ ":cmsis_os_header" ]
  output_file = get_target_outputs(":cmsis_os_header")
  rustenv = [ "BINDGEN_DIR=" + rebase_path(output_file[0]) ]
}

build_rust("cmsis_os2") {
  crate_type = "rlib"
  sources = [ "src/lib.rs" ]
  deps = [ ":cmsis_os2_header" ]
  output_file = get_target_outputs(":cmsis_os2_header")
  rustenv = [ "BINDGEN_DIR=" + rebase_path(output_file[0]) ]
}
