[package]
name = "bsp"
version = "0.1.0"
edition = "2021"

[lib]
name = "blue_bsp"
crate-type = ["staticlib","rlib"]
path = "src/lib.rs"

[build-dependencies]
bindgen = "0.69.4"

[dependencies]
thiserror = { version = "2.0.9", default-features = false }
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
tock-registers = "0.9.0"
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
blue_arch = { path = "../arch" }
blue_kernel = { path = "../kernel" }


[features]
default = ["enable_uart0", "enable_uart1"]
enable_uart0 = []
enable_uart1 = []
