import("//build/templates/rust.gni")
import("//build/toolchain/bluekernel.gni")
import("//kernel/common_crate_rustflags.gni")

build_rust("librs_integration_test_image") {
  testonly = true
  crate_type = "bin"
  sources = [ "integration_test.rs" ]
  edition = "2021"

  proc_macro_deps = [ "//kernel/test_harness:bluekernel_test_macro" ]

  deps = [
    "//external/semihosting/v0.1.20:semihosting",
    "//external/spin/v0.9.8:spin",
    "//kernel/header:bluekernel_header",
    "//kernel/kernel:bluekernel",
    "//kernel/librs:librs_test",
    "//kernel/scal:bluekernel_scal_test",
    "//libc:libc",
  ]
  inputs = [ "//kernel/kernel/src/bsp/$bsp/link.x" ]
  rustflags = test_image_rustflags
  rustflags += common_crate_rustflags
}

gen_qemu_runner("librs_integration_test_runner") {
  testonly = true
  img = ":librs_integration_test_image"
  qemu = "$qemu_exe"
  board = "$bsp"
  semihosting = true
}

run_qemu_check("run_librs_integration_test") {
  testonly = true
  runner = ":librs_integration_test_runner"
  checker = "integration_test.rs"
}
